# deepm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/backtest_settings/: bt-baseline-longonly.yaml  bt-baseline-macd-rm.yaml  bt-baseline-tsmom-erc.yaml  bt-baseline-tsmom-rm.yaml  bt-baseline-tsmom.yaml  bt-deepm-gat-10seed.yaml  bt-deepm-gat-flip.yaml  bt-deepm-gat-pooled-only.yaml  bt-deepm-gat-softmin-t1.yaml  bt-deepm-gat-zero-cost.yaml  bt-deepm-gcn.yaml  bt-deepm-graph-only.yaml  bt-post2020-baseline-macd-mvo-tp.yaml  bt-post2020-baseline-macd.yaml  bt-post2020-baseline-tsmom-mvo-tp.yaml  bt-post2020-baseline-tsmom-mvo.yaml  bt-post2020-deepm-gat-100seed.yaml  bt-post2020-deepm-gat-1seed.yaml  bt-post2020-deepm-gat-50seed.yaml  bt-post2020-deepm-gat-cascading.yaml  bt-post2020-deepm-gat-full-cost.yaml  bt-post2020-deepm-gat-macd.yaml  bt-post2020-deepm-gat-no-rezero.yaml  bt-post2020-deepm-gat-softmin-t005.yaml  bt-post2020-deepm-gat.yaml  bt-post2020-deepm-independent.yaml  bt-post2020-deepm-no-graph.yaml  bt-post2020-temporal-baseline.yaml  bt-smoke-deepm-gat-cascading.yaml  bt-smoke-deepm-gat-flip.yaml  bt-smoke-deepm-gat-full-cost.yaml  bt-smoke-deepm-gat-macd.yaml  bt-smoke-deepm-gat-no-rezero.yaml  bt-smoke-deepm-gat-pooled-only.yaml  bt-smoke-deepm-gat-softmin-t005.yaml  bt-smoke-deepm-gat-softmin-t1.yaml  bt-smoke-deepm-gat-zero-cost.yaml  bt-smoke-deepm-gat.yaml  bt-smoke-deepm-gcn.yaml  (+6 more)
deepm/: _paths.py
scripts/: aggregate_metrics.py  build_graph.py  generate_smoke_configs.py  prepare_features.py  reproduce.sh  smoke_test.sh
(+58 files in other folders)
